Sun Jun  8 21:39:30 2003  Joern Thyssen  <jth@gnubg.org>

	Change how cubeful equities are calculated for money play to match
	match play. 
 	(reported by Robert Eberlein and Michael Depreli)

        * eval.c (MoneyLive): new function.
        * eval.c (Cl2CfMoney): rewrite code so it's similar to the
        match play code.

Sun Jun  8 22:09:03 2003  Joern Thyssen  <jth@gnubg.org>

       	New Cube temperature map
        (suggested by Albert Silver)

        * show.c (CommandShowTemperatureMap): new subcommand "=cube" to
        show temp. map for cube decision.
        * gtkgame.c: new menu entry for "show temperaturemap =cube".
        * gtktempmap.c (TempMapEquities): scale cubeful equity.
        * gtkcube.c (CreateCubeAnalysisTools): new button for temperature map.

Sun Jun  8 21:41:09 2003  Joern Thyssen  <jth@gnubg.org>

	Fix bug: gnubg crashes when saving or analysing a match
	where the manual dice dialog was cancelled on the first move of 
	the match.
        (reported by Michael Depreli)

        * play.c (NewGame): initialise plGame and plLastMove to
        avoid crashes.
	* play.c (ApplyGameOver): pass correct game.

Sun Jun  8 21:43:40 2003  Joern Thyssen  <jth@gnubg.org>

        Fix bug: analysis on 0-ply does not stop when interrupted.
        (reported by Michael Depreli)

        * analysis.c (AnalyzeMove): return -1 if interrupted.

Sat Jun  7 10:13:31 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (EvaluatePositionCubeful4, EvaluatePositionFull):
	ensure nReductionGroup is reset to zero.
	(reported by Michael Depreli)

Fri Jun  6 12:43:47 2003  Joern Thyssen  <jth@gnubg.org>

	* gtktempmap.c (ExposeQuadrant): ahem, fix small bug in
	index calculation.
	(bug 3873 reported by Ned Cross)

Fri Jun  6 12:21:14 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (SetMatchID): dump values for invalid match IDs.
	* matchid.c (MatchFromKey): no crawford game for money play
	(reported by Rod Roark)
